kube-two/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-frontend
  template:
    metadata:
      labels:
        app: kube-frontend
    spec:
      containers:
        - name: kube-frontend
          image: sklrsn/kube-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
