kube-two/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-redis
  template:
    metadata:
      labels:
        app: kube-redis
    spec:
      containers:
        - name: kube-two-redis
          image: sklrsn/kube-redis:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 6379
