kube-two/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-backend-service
spec:
  type: ClusterIP
  selector:
    app: kube-backend
  ports:
    - port: 9090
      targetPort: 9090
