kube-two/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-frontend-service
spec:
  type: ClusterIP
  selector:
    app: kube-frontend
  ports:
    - port: 8080
      targetPort: 80
