kube-two/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-postgres-service
spec:
  type: ClusterIP
  selector:
    app: kube-postgres
  ports:
    - port: 5432
      targetPort: 5432
