kube-two/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-redis-service
spec:
  type: ClusterIP
  selector:
    app: kube-redis
  ports:
    - port: 6379
      targetPort: 6379
