kube-two/k8s/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
  labels:
    name: kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube-frontend-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/app/"
            backend:
              service:
                name: kube-backend-service
                port:
                  number: 9090
